--- a/app/index.html
+++ b/app/index.html
@@ -1,35 +1,27 @@
 <html ng-app="App">
 	<head>
-		<link type="text/css" rel="stylesheet" href="css/bootstrap.css"></link>
 		<link type="text/css" rel="stylesheet" href="css/style.css"></link>
 		<script src="lib/angular/angular.js"></script>
-		<script src="js/modules-mocks.js"></script>
 		<script src="js/controllers.js"></script>
 	</head>
 	<body>
-		<div class="container">
-			<div ng-controller="LoginFormController">
-				<form action="index.html" method="get" name="form" novalidate> 
-					<p class="bolt-bank">Bank <span class="light-bank">Support Portal</span></p>
-						<div class="row">
-							<div class="input-box">
-								<input type="email" name="uEmail" class="text-input email" ng-model="loginForm.email" placeholder="E-mail" required />
-								<span ng-class="{ error: (form.uEmail.$error.required || form.uEmail.$error.email) && !form.uEmail.$pristine, active: !form.uEmail.$error.required && !form.uEmail.$error.email}"></span>
-								<div class="error-message" ng-show="form.uEmail.$error.required && !form.uEmail.$pristine">This field is required</div>
-      							<div class="error-message" ng-show="form.uEmail.$invalid && !form.uEmail.$pristine">Invalid UserName</div>
-							</div>
-							<div class="input-box">
-								<input type="password" name="uPassword" class="text-input pass" password-validate ng-model="loginForm.password" placeholder="Password" required/>
-								<span ng-class="{ error: (form.uPassword.$error.required || form.uPassword.$error.password) && !form.uPassword.$pristine, active: !form.uPassword.$error.required && !form.uPassword.$error.password}"></span>
-								<div class="error-message" ng-show="form.uPassword.$error.required && !form.uPassword.$pristine">This field is required</div>
-      							<!--<div class="error-message" ng-show="form.uPassword.$error.password && !form.uEmail.$pristine">Invalid Password</div>-->
-							</div>
-							<!--<input type="submit" value="Login" class="submit-login" />-->
-							<button class="submit-login" ng-disabled="!form.$valid">Login</button>
-							<p class="forgot-pass">Forgot your password? <a href="index.html">Reset it here</a></p>
-						</div>
-				</form>
-			</div>
+		<div class="container" ng-controller="LoginFormController">
+			<p class="bold-bank">Bank <span class="light-bank">Support Portal</span></p>
+			<form action="index.html" method="get" name="form" novalidate>
+				<div class="input-box">
+					<input type="email" name="uEmail" class="text-input email" ng-model="loginForm.email" placeholder="E-mail" required />
+					<span ng-class="{ error: (form.uEmail.$error.required || form.uEmail.$error.email) && !form.uEmail.$pristine, active: !form.uEmail.$error.required && !form.uEmail.$error.email}"></span>
+					<div class="error-message" ng-show="form.uEmail.$error.required && !form.uEmail.$pristine">This field is required</div>
+						<div class="error-message" ng-show="form.uEmail.$error.email && !form.uEmail.$pristine">Invalid UserName</div>
+				</div>
+				<div class="input-box">
+					<input type="password" name="uPassword" class="text-input pass" password-validate ng-model="loginForm.password" placeholder="Password" required/>
+					<span ng-class="{ error: (form.uPassword.$error.required || form.uPassword.$error.password) && !form.uPassword.$pristine, active: !form.uPassword.$error.required && !form.uPassword.$error.password}"></span>
+					<div class="error-message" ng-show="form.uPassword.$error.required && !form.uPassword.$pristine">This field is required</div>
+				</div>
+				<input type="submit" class="submit-login" ng-disabled="!form.$valid"  ng-click="login($event)" value="Login" />
+				<p class="forgot-pass">Forgot your password? <a href="#">Reset it here</a></p>
+			</form>
 		</div>
 	</body>
 </html>
