--- a/test/e2e/runner.html
+++ b/test/e2e/runner.html
@@ -6,6 +6,7 @@
 		<script src="../../app/lib/angular/angular.js"></script>
 		<script src="../lib/angular/angular-mocks.js"></script>
 		<script src="../lib/angular/angular-scenario.js" ng-autotest></script>
+		<script src="utils.js"></script>
 		<script src="tests.js"></script>
 	</head>
 	<body>
