--- a/test/unit/runner.html
+++ b/test/unit/runner.html
@@ -7,8 +7,7 @@
 		<script type="text/javascript" src="../lib/jasmine-1.3.1/jasmine.js"></script>
 		<script type="text/javascript" src="../lib/jasmine-1.3.1/jasmine-html.js"></script>
 		<script src="../../app/lib/angular/angular.js"></script>
-		<script src="../lib/angular/angular-mocks.js"></script>>
-		<script src="../../app/js/modules-mocks.js"></script>
+		<script src="../lib/angular/angular-mocks.js"></script>
 		<script src="../../app/js/controllers.js"></script>
 		<script src="tests.js"></script>
 
